--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* css reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: hsl(0, 0%, 98%);
 }
