centered the container

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,16 @@
     box-sizing: border-box;
 }
 
+
+/* generici */
 body {
     background-color: hsl(0, 0%, 98%);
+}
+
+
+/* container */
+
+.container {
+    max-width: 350px;
+    margin: 0 auto;
 }
