--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
     font-family: "Poppins", sans serif;
 }
 
+main{
+    height: 100vh;
+}
+
 h1,
 h2,
 h3{
@@ -25,12 +29,20 @@ h3{
     font-weight: normal;
 }
 
+.dark {
+    color: hsl(234, 12%, 34%);
+}
+
+.light {
+    color: hsl(229, 6%, 66%);
+}
 
 /* container */
 
 .container {
     max-width: 330px;
     margin: 0 auto;
+    padding: 4em 0;
 
     .intro {
         text-align: center;
