--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,23 @@ h3{
     color: hsl(229, 6%, 66%);
 }
 
+.supervisor {
+    border-top: 2px solid hsl(180, 62%, 55%);
+}
+
+.team-builder {
+    border-top: 2px solid hsl(0, 78%, 62%);
+
+}
+.karma{
+    border-top: 2px solid hsl(34, 97%, 64%);
+
+}
+.calculator {
+    border-top: 2px solid hsl(212, 86%, 64%);
+
+}
+
 /* container */
 
 .container {
