--- a/css/style.css
+++ b/css/style.css
@@ -71,12 +71,16 @@ h3{
         border-radius: 10px;
         box-shadow: 0 10px 15px hsl(229, 6%, 66%);
         margin-bottom: 2em; 
-        padding: 2em;
+        padding: 1.5em;
         line-height: 2;
 
         figure {
             text-align: right;
             margin-top: 1em;
+        }
+
+        p {
+            font-size: 14px;
         }
     }
 }
@@ -107,7 +111,11 @@ h3{
         }
 
         .card{
-            max-width: 500px;
+            max-width: 350px;
+
+            p {
+                
+            }
         }
     }
 }
