added a div to use as a col and looked for a solution to place the cards in the page

--- a/css/style.css
+++ b/css/style.css
@@ -110,12 +110,19 @@ h3{
             margin-bottom: 50px;
         }
 
-        .card{
-            max-width: 350px;
+        .row {
+            height: 50vh;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            margin: -10px;
 
-            p {
+            .card{
+                max-width: 350px;
+                
                 
             }
         }
+
     }
 }
