--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ h3{
         max-width: 980px;
         margin: 0 auto;
         font-size: 1.5em;
+        padding: 2em 0;
         
         .intro,
         .card {
@@ -101,21 +102,26 @@ h3{
         .intro {
             max-width: 500px;
             margin: 0 auto;
+            
         }
 
         .intro p{
 
             font-size: 0.5em;
             word-wrap: normal;
-            margin-bottom: 50px;
+            margin-bottom: 80px;
         }
 
         .row {
-            height: 50vh;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             flex-wrap: wrap;
-            margin: -10px;
+            margin: 0 -20px;
+            
+
+            .col {
+                padding: 0 20px;
+            }
 
             .card{
                 max-width: 350px;
